--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <head>
       <meta charset="UTF-8" />
       <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-      <title>Bitex - Разработка IT-проектов под ключ</title>
+      <!-- <title>Bitex - Разработка IT-проектов под ключ</title> -->
     </head>
 
     <body>
